tests/purs/warning/ScopeShadowing.out
Error found:
in module [33mMain[0m
at tests/purs/warning/ScopeShadowing.purs:4:1 - 4:15 (line 4, column 1 - line 4, column 15)

  Shadowed definitions are in scope for type [33mUnit[0m from the following open imports:

    [33mimport Prelude[0m

  These will be ignored and the local declaration will be used.


See https://github.com/purescript/documentation/blob/master/errors/ScopeShadowing.md for more information,
or to contribute content related to this error.

